serve posts from /blog

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 pygments: true # syntax highlighting with pygments
 auto: true # automatically update _site when anything changes
+permalink: /blog/:year/:month/:day/:title
