--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This git respository houses the static blog content of the wilfred.me.uk blog. All content is under the GFDL 1.3.",
   "dependencies": {
     "grunt": "^0.4.5",
+    "grunt-autoprefixer": "^2.2.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-cssmin": "^0.10.0",
