--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-cssmin": "^0.10.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-cssbeautifier": "^0.1.2"
   },
   "devDependencies": {},
   "repository": {
