--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wilfred.github.com",
   "version": "1.0.0",
-  "description": "This git respository houses the static blog content of the wilfred.me.uk blog. All content is under the GFDL 1.3.",
+  "description": "This git repository houses the static blog content of the wilfred.me.uk blog. All content is under the GFDL 1.3.",
   "dependencies": {
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^2.2.0",
