Correcting home page

--- a/package.json
+++ b/package.json
@@ -23,5 +23,5 @@
   "bugs": {
     "url": "https://github.com/Wilfred/wilfred.github.com/issues"
   },
-  "homepage": "https://github.com/Wilfred/wilfred.github.com"
+  "homepage": "https://www.wilfred.me.uk"
 }
