--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: ruby
 rvm:
   - 2.1.0
-script: "bundle exec jekyll build"
+script:
+  - bundle exec jekyll build
+  - jekyll --version
 notifications:
   email: false
