--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title:       Pixyll
-email:       your_email@example.com
-author:      John Otander
-description: "A simple, beautiful theme for Jekyll that emphasizes content rather than aesthetic fluff."
+title:       Wilfred Hughes::Blog
+email:       me@wilfred.me.uk
+author:      Wilfred Hughge
+description: " programming, language design, and human factors"
 baseurl:     ""
-url:         "http://pixyll.com"
-date_format: "%b %-d, %Y"
+url:         "http://www.wilfred.me.uk"
+date_format: "%e %B %Y"
 
 # Google services
 google_verification:
@@ -17,14 +17,14 @@ google_tag_manager:
 bing_verification:
 
 # Optional features
-animated:             false
-show_related_posts:   false
+animated:             true
+show_related_posts:   true
 show_post_footers:    false
-show_social_icons:    false
+show_social_icons:    true
 ajaxify_contact_form: false
 enable_mathjax: false
-extended_fonts: false
-enable_anchorjs: false
+extended_fonts: true
+enable_anchorjs: true
 
 # Disqus post comments
 # (leave blank to disable Disqus)
@@ -37,10 +37,10 @@ facebook_appid:
 facebook_comments_number: 10
 
 # Social icons
-github_username:
+github_username: wilfred
 bitbucket_username:
 stackoverflow_id:
-twitter_username:
+twitter_username: _wilfredh
 skype_username:
 steam_nickname:
 google_plus_id:
@@ -95,13 +95,13 @@ text:
       sent:     'Message sent!'
       error:    'Error!'
   thanks: 'Thanks for contacting us. We will reply as soon as possible.'
-  og_locale: 'en_US'
+  og_locale: 'en_GB'
 
 # Build settings
 markdown:     kramdown
 redcarpet:
   extensions: ['smart', 'tables', 'with_toc_data']
-permalink:    pretty
+permalink: /blog/:year/:month/:day/:title/
 paginate:     4
 sass:
   compressed: true
