--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ future: true
 google_verification:
 # Use either direct GA implementation or set up GTM account
 # - using both will skew your data (leave blank to not use at all)
-google_analytics:
+google_analytics: UA-3370763-1
 google_tag_manager:
 # Bing services
 bing_verification:
