--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ show_post_footers:    false
 show_social_icons:    true
 ajaxify_contact_form: false
 enable_mathjax: false
-extended_fonts: true
 enable_anchorjs: true
+extended_fonts: false
 
 # Disqus post comments
 # (leave blank to disable Disqus)
