--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title:       Wilfred Hughes::Blog
 email:       me@wilfred.me.uk
-author:      Wilfred Hughge
+author:      Wilfred Hughes
 description: "programming, language design, and human factors"
 baseurl:     ""
 url:         "http://www.wilfred.me.uk"
